feta: cable place improvements
Placement tool to select multiple coordinates